lang/macro/tests/ui/fail/07-missing-storage-struct.stderr
error: no #[liquid(storage)] struct found in this contract
 --> $DIR/07-missing-storage-struct.rs:3:1
  |
3 | #[liquid::contract(version = "0.1.0")]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
  |
  = note: this error originates in an attribute macro (in Nightly builds, run with -Z macro-backtrace for more info)
